Adicionando saudação(Greeting)

--- a/universidadeCoreWeb/Views/Home/Index.cshtml
+++ b/universidadeCoreWeb/Views/Home/Index.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@model string
+@{
     ViewData["Title"] = "Home Page";
 }
-<h3>Olá mundo! Teste 2</h3>
+<h3>Olá mundo! </h3>
+<h3> @Model </h3>
