Versão final da configuração de CI/CD

--- a/universidadeCoreWeb/Views/Home/Index.cshtml
+++ b/universidadeCoreWeb/Views/Home/Index.cshtml
@@ -2,6 +2,6 @@
 @{
     ViewData["Title"] = "Home Page";
 }
-<h3>Olá mundo!!!  </h3>
+<h3>Olá mundo!! Versão final.  </h3>
 <h3> @Model </h3>
 <h3> Agora com Continuous Delivery</h3>
